Started adding integrating

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
-    // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
+    // "composite": true,                                /* Enable constraints that allow a Type`Sc`ript project to be used with project references. */
     // "tsBuildInfoFile": "./.tsbuildinfo",              /* Specify the path to .tsbuildinfo incremental compilation file. */
     // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects. */
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
@@ -105,9 +105,20 @@
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
     // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
-
+    "typeRoots": [
+      "./node_modules/@types", // Standard types location
+      "./src/types"           // Explicitly tell TypeScript to look in your custom types folder
+    ],
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "src/**/*.ts", // This tells TypeScript to include all .ts files in the src directory and its subdirectories
+    "src/**/*.d.ts" // This explicitly tells TypeScript to include all .d.ts files in the src directory and its subdirectories
+  ],
+  "exclude": [
+    "node_modules", // Always exclude node_modules to prevent type checking external libraries
+    "dist"          // Exclude your output directory
+  ]
 }
