--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "algebrite": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mathjs": "^14.5.3"
